# perp-simulation

./: .gitignore  LICENSE  README.md  pyproject.toml
notebook/: eda_perpetual_futures_data.ipynb  eda_simulation_result.ipynb
perp_simulation/: constant.py  error.py  main.py
perp_simulation/entity/: account.py  account_snapshot.py  funding_rate.py  ohlcv.py  position.py  simulation.py  trade.py
perp_simulation/gateway/: data_service.py  funding_rate_repository.py  historical_feather_repository.py  ohlcv_repository.py  simulation_serializer.py
perp_simulation/use_case/: liquidate_positions.py  make_account_snapshot.py  open_cross_margin_position.py  run_simulation.py  settle_funding_rate_costs.py  update_position_effective_leverage.py  update_position_initial_margin.py  update_position_liquidation_price.py  update_position_maintenance_margin.py  update_position_unrealized_pnl.py
resources/tests/: expected_run_simulation_20240122T075000_20240122T075500_1min_account_100_long_500usd.ods
tests/gateway/: test_data_processing_service.py  test_feather_repository.py  test_funding_rate_repository.py  test_ohlcv_repository.py  test_simulation_serializer.py  util.py
tests/use_case/: conftest.py  liquidate_positions_test.py  make_account_snapshot_test.py  open_cross_margin_position_test.py  run_simulation_test.py  settle_funding_rate_costs_test.py  update_position_effective_leverage_test.py  update_position_initial_margin_test.py  update_position_liquidation_price_test.py  update_position_maintenance_margin_test.py  update_position_unrealized_pnl_test.py
(+2 files in other folders)
